[workspace]
members = ["capturer-svr"]
resolver = "3"

[workspace.dependencies]
ctor = "0.6.3"
log = "0.4.29"
thiserror = "2.0.17"
clap = "4.5.53"
chrono = "0.4.42"
serde = "1.0.228"
serde_with = "3.16.1"
serde_json = "1.0.145"
tokio = "1.48.0"
actix-web = "4.12.1"
validator = "0.20.0"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
image = "0.25.9"
rustc-hash = "2.1.1"
bytes = "1.11.0"
futures = "0.3.31"
wheel-rs = "0.4.3"
robotech = "0.13.2"
oss-api = "0.3.1"


[patch.crates-io]
wheel-rs = { path = "../wheel-rs" }
robotech = { path = "../robotech-rs" }
oss-api = { path = "../oss-rs/oss-api" }
