[workspace]
members = ["capturer-svr"]
resolver = "3"

[workspace.dependencies]
ctor = "0.6.3"
log = "0.4.29"
thiserror = "2.0.17"
clap = "4.5.53"
chrono = "0.4.42"
serde = "1.0.228"
serde_with = "3.16.1"
serde_json = "1.0.147"
tokio = "1.48.0"
tokio-stream = "0.1.17"
actix-web = "4.12.1"
validator = "0.20.0"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
image = "0.25.9"
rustc-hash = "2.1.1"
bytes = "1.11.0"
futures = "0.3.31"
async-stream = "0.3.6"
# cross打包时用，需要开启vendored feature
openssl = { version = "0.10.75" }
wheel-rs = "1.1.1"
robotech = "1.3.0"
oss-api-client = "1.1.3"


[patch.crates-io]
wheel-rs = { path = "../wheel-rs" }
robotech = { path = "../robotech-rs" }
oss-api-client = { path = "../oss-rs/oss-api-client" }
