[package]
name = "capturer-svr"
version = "0.1.0"
edition = "2024"
authors = ["zbz"]
keywords = ["capture", "photo", "rtsp", "jpg"]
description = ""
license = "MIT"
categories = []
repository = "https://github.com/rusthing/capturer"
homepage = "https://github.com/rusthing/capturer"
documentation = "https://github.com/rusthing/capturer/blob/master/README.adoc"
readme = "README.adoc"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
rustc-hash = { workspace = true }
actix-web = { workspace = true }
validator = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }
image = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
wheel-rs = { workspace = true }
robotech = { workspace = true, features = ["web", "api"] }
oss-api = { workspace = true }
futures-core = "0.3.31"


[dev-dependencies]
ctor = { workspace = true }