[package]
name = "capturer-svr"
version = "0.1.0"
edition = "2024"
authors = ["zbz"]
keywords = ["capture", "photo", "rtsp", "jpg"]
description = ""
license = "MIT"
categories = []
repository = "https://github.com/rusthing/capturer"
homepage = "https://github.com/rusthing/capturer"
documentation = "https://github.com/rusthing/capturer/blob/master/README.adoc"
readme = "README.md"

[dependencies]
log = { workspace = true }
tracing-log = { version = "0.2.0", optional = true }
tracing-core = { version = "0.1.36", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "chrono", "tracing-log"], optional = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
rustc-hash = { workspace = true }
actix-web = { workspace = true }
validator = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }
bytes = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
# cross打包时用，需要开启vendored feature
openssl = { workspace = true, features = ["vendored"] }
wheel-rs = { workspace = true }
robotech = { workspace = true, features = ["web", "api-client"] }
oss-api-client = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }