[package]
name = "capturer-svr"
version = "1.0.1"
edition = "2024"
authors = ["zbz"]
keywords = ["capture", "photo", "rtsp", "jpg"]
description = "A Rust-based video capturing service that captures images from video streams, supporting RTSP and other video formats."
license = "MIT"
categories = []
repository = "https://github.com/rusthing/capturer"
homepage = "https://github.com/rusthing/capturer"
documentation = "https://github.com/rusthing/capturer/blob/master/README.adoc"
readme = "README.md"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
rustc-hash = { workspace = true }
actix-web = { workspace = true }
validator = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }
bytes = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
wheel-rs = { workspace = true }
robotech = { workspace = true, features = ["web", "api-client"] }
oss-api-client = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
# cross打包时用，需要开启vendored feature
openssl = { workspace = true, features = ["vendored"] }
